--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -15,8 +15,8 @@
                         {% include './icons/file-earmark-plus.svg' %}
                     </a>
                 {% endif %}
-                <h1><a href="/">Django Girls Blog</a></h1>
-                <h1><a href="category">Categories</a></h1>          
+                <h5><a href="/">Django Girls Blog</a> <a href="category"> Categories</a></h5> <a href="tags"> tags</a></h5>
+                       
           </div>
         </header>
         <main class="content container">
