--- a/blog/templates/blog/category.html
+++ b/blog/templates/blog/category.html
@@ -1,11 +1,11 @@
-{% extends 'blog/base2.html' %}
+{% extends 'blog/base.html' %}
 {% block content %}
 {% for c in cat %}
 <article class="post">
     <time class="date">
         {{ c.published_date }}
     </time>
-    <h2><a href="{% url 'category'}">{{ c.name }}</a></h2>
+    <h2><a href="{% url 'category_detail' c.id %}">{{ c.name }}</a></h2>
     <p>{{ c.text|linebreaksbr }}</p>
 </article>
 {% endfor %}
