--- a/blog/templates/blog/category_detail.html
+++ b/blog/templates/blog/category_detail.html
@@ -4,16 +4,16 @@
     <article class="cat">
         <aside class="actions">
             {% if user.is_authenticated %}
-     <a class="btn btn-secondary" href="{% url 'category_detail' cat' %}">
+     <a class="btn btn-secondary" href="{% url 'blog:category_detail' cat' %}">
         {% include './icons/pencil-fill.svg' %}
      </a>
 {% endif %}
         </aside>
-        <!-- {% if cat.published_date %}
+        {% if cat.published_date %}
             <time class="date">
                 {{ cat.published_date }}
             </time>
-        {% endif %} -->
+        {% endif %}
         <h2>{{ cat.title }}</h2>
         <p>{{ cat.text|linebreaksbr }}</p>
         
