--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -4,18 +4,67 @@
     <article class="post">
         <aside class="actions">
             {% if user.is_authenticated %}
-     <a class="btn btn-secondary" href="{% url 'post_edit' pk=post.pk %}">
-        {% include './icons/pencil-fill.svg' %}
-     </a>
-{% endif %}
+            <a class="btn btn-secondary" href="{% url 'blog:post_edit' pk=post.pk %}">
+                {% include './icons/pencil-fill.svg' %}
+            </a>
+            {% endif %}
         </aside>
         {% if post.published_date %}
-            <time class="date">
-                {{ post.published_date }}
-            </time>
+        <time class="date">
+            {{ post.published_date }} 
+        </time>
         {% endif %}
-        <h2>{{ post.title }}</h2>
-        <p>{{ post.text|linebreaksbr }}</p>
         
+        {% if post.image %}
+        
+            <img src="{{ post.image.url }}" alt=" Avatar" style="width:100px;border-radius: 50%;">
+        {% endif %}
+        
+        <h2>{{ post.title }}</h2>
+
+        {% if post.future_image %}
+
+         <img src="{{ post.future_image.url }}" alt="img" style="width:7000;height:400px;">
+        
+        {% endif %}
+
+        <p>{{ post.text|linebreaksbr }}</p>
+        <h2>Add a new comment</h2>
+        <form action="" method="POST">
+            {% csrf_token %}
+            <input type="text" name="body">
+            <button type="submit">comment</button>
+        </form>
+        <b>Comments</b>
+        {% for comment in comments %}   
+            <div class="comment">
+                <p class="info">{{ comment.author }}</p>
+                    {{ comment.body|linebreaks }}
+
+                {% for replay in comment.replies.all %}
+                    <p class="info">{{ replay.author }}rr</p>
+                    <li>{{ replay.body }}rr</li>
+                {% endfor %}
+
+                <form action="." method="post">
+                    {{ comment_form.as_p }}
+                    {% csrf_token %}
+                    <input type="hidden" name="parent_id" value="{{ comment.id }}">
+                    <input class="btn btn-primary" type="submit" value="Replay">
+                </form>
+            </div>
+        {% empty %}
+        <h4>There are no comments yet.</h4>
+        {% endfor %}
+            
+    
     </article>
-{% endblock %}
+{% endblock %}  
+
+
+
+
+
+
+
+
