User registration Login logout

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,12 +12,15 @@
             <div class="container">
                 {% if user.is_authenticated %}
                     <a href="{% url 'blog:post_new' %}" class="top-menu">
+                        <a href="logout"> Logout</a>
+                        <a href="/update/{{user.id}}/edit/"> Update</a></h5>
                         {% include './icons/file-earmark-plus.svg' %}
                     </a>
-                {% endif %}
-                <h5><a href="/">Django Girls Blog</a> <a href="category"> Categories</a></h5> <a href="tags"> tags</a></h5><a href="register/"> register</a></h5>
-                       
-          </div>
+                    {%else %}
+                    <a href="register">Register</a><a href="login"> Login</a>
+                    {% endif %}
+                  <h5><a href="/">Django Girls Blog</a> <a href="category"> Categories</a> <a href="tags"> tags</a>
+          </div>    
         </header>
         <main class="content container">
             <div class="row">
