--- a/blog/templates/blog/logout.html
+++ b/blog/templates/blog/logout.html
@@ -1,6 +1,1 @@
-{% extends 'base.html' %}
-
-{% block content %}
-  <h2>Logout</h2>
-  <p>You have been logged out.</p>
-{% endblock %}
+<p>You have been logged out. <a href="{% url 'login/' %}">Login again</a></p>
