--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,7 +9,7 @@
             </time>
             <h2><a href="{% url 'blog:post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
             <p>{{ post.text|linebreaksbr }}</p>
-            <samp>   ​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
+            <samp>      
     {% if post.image %}
         
         <img src="{{ post.image.url }}" alt=" Avatar" style="width:100px;border-radius: 50%;">
